--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 99999999;
 }
 
 .loader {
