--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000; /* or match your theme */
+    background-color: #16181a;
     display: flex;
     justify-content: center;
     align-items: center;
