--- a/style.css
+++ b/style.css
@@ -300,6 +300,16 @@ nav a {
     cursor: pointer;
 }
 
+nav a[role="button"] {
+    color: inherit;
+    text-decoration: none;
+}
+
+a[role="button"]:focus-visible {
+    outline: none;
+    filter: brightness(5);
+}
+
 nav img {
     width: 1em;
     height: 1em;
